fixed about scroll not working on safari and firefox

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -18,7 +18,7 @@
       padding: 0 15px;
 
       a:hover {
-        font-weight: bold;
+        text-decoration: underline;
         cursor: pointer;
       }
     }
